--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>digital agency</title>
 	<link rel="stylesheet" href="styles/style.css">
+	<script src="https://kit.fontawesome.com/4faaf0be6a.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	<header class="header">
@@ -79,7 +80,89 @@
 				</div>
 			</div>
 		</section>
+		<!-- Appointment -->
+		<section class="appointment">
+			<div class="appointment-call">
+				<img src="asset/icons/phone-call.png" alt="">
+				<div>
+					<h5>GET A FREE CONSULTATION</h5>
+					<h3>987 233 0000</h3>
+				</div>
+			</div>
+			<div class="appointment-description">
+				<p>
+					Vero id posuere tempus aspernatur quaerat mollis voluptatum eveniet <br>porro <br>
+					viverra libero habitasse Aut ab nibh aliqua optio veniet porro viverr.
+				</p>
+			</div>
+			<button class="primary-btn service-btn">MAKE APPOINTMENT</button>
+		</section>
+		<!-- Blog section -->
+		<section class="blog">
+			<h2 class="blog-title"><span>Blog</span> & News From Us!</h2>
+			<p class="blog-description">Sint nascetur facere, delectus conubia consequuntur, nonummy distinctio! Non officiis, id natus non nisl provident justo.</p>
+			<div class="blog-box">
+				<div class="blog1">
+					<img src="asset/image/blog-1.jpg" alt="">
+					<h2>Maxime rhoncus aliquet sint eu accusantium illum.</h2>
+					<p>Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis, nascetur?.....</p>
+				</div>
+				<div class="blog1">
+					<img src="asset/image/blog-1.jpg" alt="">
+					<h2>Maxime rhoncus aliquet sint eu accusantium illum.</h2>
+					<p>Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis, nascetur?.....</p>
+				</div>
+				<div class="blog1">
+					<img src="asset/image/blog-1.jpg" alt="">
+					<h2>Maxime rhoncus aliquet sint eu accusantium illum.</h2>
+					<p>Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis, nascetur?.....</p>
+				</div>
+			</div>
+		</section>
 	</main>
-	<footer class="footer"></footer>
+	<footer class="footer">
+		<div class="footer-container">
+			<div class="logo-box">
+				<img src="asset/logo/logo.png" alt="">
+				<p>Auctor blandit dolorem primis eius odit soluta molestie? Malesuada elementum aut doloremque labo.</p>
+				<div class="footer-icon">
+					<i class="fa-brands fa-facebook"></i>
+					<i class="fa-brands fa-twitter"></i>
+					<i class="fa-brands fa-instagram"></i>
+					<i class="fa-brands fa-youtube"></i>
+
+
+				</div>
+			</div>
+			<div class="footer-links">
+				<h4 class="footer-title">Useful links</h4>
+				<ul class="footer-list">
+					<li><a href="#">About Us</a></li>
+					<li><a href="#">Careers</a></li>
+					<li><a href="#">News & Artciles</a></li>
+					<li><a href="#">legal Notice</a></li>
+				</ul>
+			</div>
+			<div class="footer-supports">
+				<h4 class="footer-title">Supports</h4>
+				<ul class="footer-list">
+					<li><a href="#"> Help Center</a></li>
+					<li><a href="#">FAQ</a></li>
+					<li><a href="#">Contact Us</a></li>
+					<li><a href="#">Parent Community</a></li>
+				</ul>
+			</div>
+			<div class="footer-contact">
+				<h4 class="footer-title">Contact Information</h4>
+				<address>
+					<p>Feel free to contact & reach us !!</p>
+					<p><i class="fa-solid fa-location-dot"></i> 3557 Derek Drive, Orlando, Florida</p>
+					<p><i class="fa-solid fa-phone-volume"></i> +1(456)657-887</p>
+					<p><i class="fa-solid fa-envelope"></i> info@domain.com<</p>
+				</address>
+			</div>
+		</div>
+		<p class="footer-copy"><small>Copyright &copy; 2022 Agence. All rights reserved.</small></p>
+	</footer>
 </body>
 </html>
